--- a/style.css
+++ b/style.css
@@ -53,3 +53,11 @@ ul{
 .start-75{
     left: 75%!important;
 }
+.btn-fav{
+    color: white;
+    font-weight: 600;
+    padding: 15px 20px;
+    border: 0px solid;
+    background-color: rgb(22, 84, 255);
+    border-radius: 25px;
+}
